--- a/client/nav.jade
+++ b/client/nav.jade
@@ -29,7 +29,7 @@ template(name='nav')
                 a.item.set_shop(href='/m/shop' class="{{isActivePath '/m/shop'}}" title='shop')
                     //- i.food.large.icon
                     +i name='shop'
-                    .mobile.hidden &nbsp; shop
+                    .mobile.hidden.iggdrasil &nbsp; shop
             .right.menu
                 //- if is_admin
                 //-     a.icon.item.set_task(href='/m/task' class="{{isActivePath '/m/task'}}")
