--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -2,7 +2,7 @@ template(name='login')
     .ui.padded.stackable.grid
         .centered.row
             .ten.wide.column
-                h1.ui.center.aligned.grey.header gold run online
+                h1.ui.center.aligned.grey.header enter iggdrasil
                     //- i.massive.icons
                     //-     i.home.icon
                     //-     i.corner.right.chevron.icon
