basic mode back to black

--- a/client/alpha.jade
+++ b/client/alpha.jade
@@ -1,7 +1,7 @@
 template(name='alpha')
     .ui.stackable.grid
         .row
-            .eight.wide.column.scrolling
+            .sixteen.wide.column
                 unless is_loading
                     // .ui.divider
                     // // each sessions
@@ -22,8 +22,8 @@ template(name='alpha')
                     .create_alpha.ui.circular.button.pointer(title='new session')
                         i.plus.icon
                         |alpha session
-            //- if single_doc
-            .eight.wide.column.scrolling
+        .row
+            .sixteen.wide.column
                 each current_alpha.result_ids
                     +alpha_result
             
@@ -32,35 +32,29 @@ template(name='alpha')
 
 template(name='alpha_facet')
     if filtering_res
-        div
-        //- .ui.hidden.divider
-        .ui.accordion
-            .active.title
-                .ui.grey.inline.header 
-                    if icon
-                        i.icon(class=icon)
-                        //- +i name=icon            
-                    if title
-                        |#{title}
-                    else 
-                        |#{key}
-                i.dropdown.icon
-            .active.content
+        .ui.grey.inline.header 
+            if icon
+                i.icon(class=icon)
+                //- +i name=icon            
+            if title
+                |#{title}
+            else 
+                |#{key}
+    if is_admin
+        .ui.icon.small.transparent.input
+            i.search.icon
+            input.add_filter(type='text')
+    div
+    each filtering_res
+        if name
+            .selector.ui.large.circular.button.toggle_selection(class=toggle_value_class title=count)
+                strong #{name}
                 if is_admin
-                    .ui.icon.small.transparent.input
-                        i.search.icon
-                        input.add_filter(type='text')
-                    //- div
-                each filtering_res
-                    if name
-                        .selector.ui.compact.circular.button.toggle_selection(class=toggle_value_class title=count)
-                            strong #{name}
-                            if is_admin
-                                small #{cal_count} #{count}
-                    else
-                        .selector.ui.circular.button.toggle_selection(class=toggle_value_class title=count)
-                            strong [null]
-                            //- small #{cal_count}
+                    small #{cal_count} #{count}
+        else
+            .selector.ui.circular.button.toggle_selection(class=toggle_value_class title=count)
+                strong [null]
+                //- small #{cal_count}
             
             
             
