--- a/client/client.jade
+++ b/client/client.jade
@@ -24,7 +24,7 @@ head
 template(name='layout')
     //- img.ui.fluid.image.banner_image(src="{{c.url 'stars_big' width=1000 height=cal500 crop='crop'}}")
     //- img.ui.fluid.image(src="{{c.url 'stars_big' width=2000}}")
-    +nav
+    //- +nav
     //- if currentUser
     .ui.stackable.grid(class=invert_class)
         .centered.row
