--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -2,7 +2,7 @@ template(name='delta')
     with current_model
         .ui.stackable.padded.grid
             .row
-                .six.wide.column
+                .four.wide.column.scrolling
                     .ui.inline.header
                         //- i.icon(class=icon)
                         +i name=icon
@@ -47,7 +47,7 @@ template(name='delta')
                     div
                     each sorted_facets
                         +facet
-                .ten.wide.column.scrolling
+                .eight.wide.column.scrolling
                     //- .ui.inline.header
                     //-     |sort by
                     //- .ui.button
